some refactoring and JavaDoc